--- a/new 1.html
+++ b/new 1.html
@@ -1,8 +1,9 @@
 <html>
-
-<head>
-	<p1>COUCOU bonsoir</p1>
-</head
+  <head>
+    <h1> bonsoir</h1>
+</<head>
+<body>
+  <h2> comment allez vous</h2>
+</body>
 </html>
-		
 	
